# TelloDroneLib

./: .clang-format  .gitignore  CMakeLists.txt
Demos/: 360_and_land.cpp  bounce_and_land.cpp  circle_and_land.cpp  connect.cpp  controller.cpp  display_battery_percentage.cpp  drone_info.cpp  emergency_stop.cpp  flip_and_land.cpp  live_drone_height.cpp  opencv.cpp  set_height_limit.cpp  take_off_and_land.cpp  video.cpp
Documentation/: protocol.md
Lib/: DroneData.h  DronePacket.cpp  DronePacket.h  TelloDrone.cpp  TelloDrone.h
Lib/Utils/: CRCHelpers.h  StringHelpers.h  Types.h
Tests/: connect.cpp  video.cpp
